[tool.poetry]
name = "auto-pytabs"
version = "0.2.0"
description = "Automatically generate code examples for different Python versions in mkdocs or Sphinx based documentations"
authors = ["Janek Nouvertné <provinzkraut@posteo.de>"]
readme = "README.md"
packages = [{ include = "auto_pytabs" }]

[tool.poetry.dependencies]
python = "^3.8"
pyupgrade = "^3.3.1"
autoflake = "^2.0.0"
sphinx = { version = ">=4,<6", optional = true }
markdown = {version = ">=3.2.1,<3.4", optional = true }
mkdocs = {version = "^1.4.2", optional = true}
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.990"
types-markdown = "^3.4.2.1"
pytest = "^7.2.0"
pymdown-extensions = "^9.9"
sphinx-design = "^0.3.0"
pytest-regressions = "^2.4.2"
types-docutils = "^0.19.1.1"
mkdocs = "^1.4.2"
pyyaml = "^6.0"


[tool.poetry.extras]
sphinx = ["sphinx"]
markdown = ["markdown"]
mkdocs = ["mkdocs"]


[tool.poetry.plugins."markdown.extensions"]
auto_pytabs = "auto_pytabs.markdown_ext:AutoPyTabsExtension"

[tool.poetry.plugins."mkdocs.plugins"]
auto_pytabs = "auto_pytabs.mkdocs_plugin:AutoPyTabsPlugin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sphinx_design.*:",
    "ignore::DeprecationWarning:sphinx.util.images:4",
    "ignore::DeprecationWarning:importlib.resources._legacy:80",
]
